# SC

./: CMakeLists.txt  CONTRIBUTING.md  README.md  arch_build.cmake  mission_build.cmake  sc_doxygen_config.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-documentation.yml  codeql-build.yml  unit-test-coverage.yml
config/: default_sc_extern_typedefs.h  default_sc_fcncodes.h  default_sc_interface_cfg.h  default_sc_internal_cfg.h  default_sc_mission_cfg.h  default_sc_msg.h  default_sc_msgdefs.h  default_sc_msgids.h  default_sc_msgstruct.h  default_sc_platform_cfg.h  default_sc_tbl.h  default_sc_tbldefs.h  default_sc_tblstruct.h
docs/: CFS_SC_Design.ppt  MM_2.5.0_AppRequirementsDocument.doc  SC_3.1.0_AppRequirementsDocument.doc  SC_RequirementsToDesignTrace.docx  sc-detaildesign.doxyfile.in  sc_FunctionalRequirements.csv
docs/dox_src/: CMakeLists.txt  cfs_sc.dox  sc-common.doxyfile.in  sc-usersguide.doxyfile.in
fsw/for_build/: sctables.mak
fsw/inc/: sc_events.h  sc_msg.h  sc_msgdefs.h  sc_msgids.h  sc_platform_cfg.h  sc_tbldefs.h
fsw/mission_inc/: sc_perfids.h
fsw/platform_inc/: sc_msgids.h  sc_platform_cfg.h  sc_rts.h
fsw/src/: sc_app.c  sc_app.h  sc_atsrq.c  sc_atsrq.h  sc_cmds.c  sc_cmds.h  sc_dispatch.c  sc_dispatch.h  sc_events.h  sc_index_types.h  sc_loads.c  sc_loads.h  sc_msg.h  sc_msgdefs.h  (+9 more)
unit-test/: CMakeLists.txt  README.txt  sc_app_tests.c  sc_atsrq_tests.c  sc_cmds_tests.c  sc_dispatch_tests.c  sc_loads_tests.c  sc_rtsrq_tests.c  sc_state_tests.c  sc_utils_tests.c
(+109 files in other folders)
